# TODO: should use `meta.yml` and follow the instructions on
#       https://github.com/coq-community/templates to regenerate.

opam-version: "2.0"
maintainer: "Takafumi Saikawa <tscompor@gmail.com>"
version: "dev"

homepage: "https://github.com/t6s/graphalg"
dev-repo: "git+https://github.com/t6s/graphalg.git"
bug-reports: "https://github.com/t6s/graphalg/issues"
license: "LGPL-2.1-or-later"

synopsis: "Graph theory and combinatorial commutative algebra for Rocq"
description: """
GraphAlg is a Rocq library formalizing graph theory and combinatorial commutative algebra.
"""

build: [
  [make "-j%{jobs}%" ]
  [make "-C" "extraction" "tests"] {with-test}
]
install: [make "install"]
depends: [
  "coq" { (>= "8.19" & < "9.1~") }
#  "coq-mathcomp-ssreflect" { (= "2.3.0") }
#  "coq-mathcomp-fingroup" { (= "2.3.0") }
#  "coq-mathcomp-algebra" { (= "2.3.0") }
#  "coq-mathcomp-solvable" { (= "2.3.0") }
#  "coq-mathcomp-field" { (= "2.3.0") }
  "coq-mathcomp-analysis" { (>= "1.10.0") }
#  "coq-mathcomp-reals-stdlib" { (>= "1.10.0") }
  "coq-hierarchy-builder" { >= "1.7.0" }
  "coq-mathcomp-algebra-tactics" { >= "1.2.0" }
]

tags: [
  "keyword:graph theory"
  "keyword:commutative algebra"
  "keyword:combinatorics"
  "logpath:graphalg"
]

authors: [
  "Takafumi Saikawa, Nagoya University"
  "Kazunori Matsuda, Kitami Institute of Technology"
  "Yosuke Tsuji, Kitami Institute of Technology (M1)"
]
